--- a/index.html
+++ b/index.html
@@ -231,6 +231,21 @@
             <p class="small text-muted mt-1 mb-4">
               Añade y describe cada fase del trabajo.
             </p>
+            
+            <!-- Sección de Introducción -->
+            <div class="mb-4">
+              <h3 class="fs-6 fw-bold text-dark">Introducción</h3>
+              <p class="small text-muted mt-1 mb-3">
+                Texto introductorio del informe.
+              </p>
+              <textarea
+                id="introduction"
+                class="form-control"
+                rows="2"
+                placeholder="Por medio del presente documento, se presenta el informe técnico correspondiente a las actividades realizadas:"
+              ></textarea>
+            </div>
+            
             <div id="stages-container" class="vstack gap-3"></div>
             <div class="d-grid">
               <button
