actualizacion este si

--- a/index.html
+++ b/index.html
@@ -456,6 +456,7 @@
     <script src="js/formManager.js"></script>
     <script src="js/navigation.js"></script>
     <script src="js/documentGenerator.js"></script>
+    <script src="js/logoDebug.js"></script>
     <script src="js/app.js"></script>
 
     <!-- Authentication Check -->
