--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login - Sistema Willis</title>
+    <title>Login - Sistema DMS</title>
 
     <!-- Bootstrap 5 CSS -->
     <link
@@ -238,7 +238,7 @@
         <div class="login-logo">
           <ion-icon name="document-text-outline"></ion-icon>
         </div>
-        <h1 class="login-title">Sistema Willis</h1>
+        <h1 class="login-title">Sistema DMS</h1>
         <p class="login-subtitle">Generador de Informes Técnicos</p>
       </div>
 
